fix: Improve contrast between text and background

--- a/css/styles.css
+++ b/css/styles.css
@@ -13,12 +13,12 @@ body,td,th,p{
 }
 
 body {
-	background-color: #fdfdfd;
+	background-color: #f9f9f9;
 	margin: 0;
 	position:relative;
 }
 a {
-	color: orange;
+	color: #FFD68A;
 	text-decoration: none;
 }
 a:hover, a:focus {
@@ -36,12 +36,12 @@ article, aside, canvas, details, figcaption, figure, footer, header, hgroup, men
 }
 
 #maincontent {
-  background-color: #f3f3f3;
+  background-color: #f9f9f9;
   min-height: 100%;
 }
 #footer {
   background-color: #444;
-  color: #aaa;
+  color: #dbdbdb;
   font-size: 0.7rem;
   letter-spacing: 1px;
   padding: 1rem;
@@ -74,7 +74,7 @@ nav h1 a {
 #breadcrumb {
     padding: 0.7rem 2rem 1rem;
     list-style: none;
-    background-color: #eee;
+    background-color: #f9f9f9;
     font-size: 1rem;
     margin: 0;
     width: 100%;
@@ -113,7 +113,7 @@ nav h1 a {
 .filter-options {
   width: 100%;
   height: 4rem;
-  background-color: #3397DB;
+  background-color: #175A87;
 
   display: flex;
   justify-content: space-around;
@@ -168,7 +168,7 @@ nav h1 a {
   min-width: 100%;
 }
 #restaurants-list li h1 {
-  color: #f18200;
+  color: #463c29;
   font-family: Arial,sans-serif;
   font-size: 1.2rem;
   font-weight: 200;
@@ -182,7 +182,7 @@ nav h1 a {
   font-size: 1rem;
 }
 #restaurants-list li a {
-  background-color: orange;
+  background-color: #463c29;
   border-bottom: 3px solid #eee;
   color: #fff;
   display: inline-block;
@@ -238,7 +238,7 @@ nav h1 a {
 }
 
 #restaurant-name {
-  color: #f18200;
+  color: #463c29;
   font-family: Arial,sans-serif;
   font-size: 1.5rem;
   font-weight: 200;
@@ -267,7 +267,7 @@ nav h1 a {
 }
 
 #reviews-container h2 {
-  color: #f58500;
+  color: #463c29;
   font-size: 24pt;
   font-weight: 300;
   letter-spacing: -1px;
@@ -293,7 +293,7 @@ nav h1 a {
 }
 
 .rating {
-  background-color: #f5ac00;
+  background-color: #463c29;
   color: #fff;
   text-transform: uppercase;
   font-weight: 700;
@@ -317,5 +317,5 @@ nav h1 a {
 }
 
 #restaurant-hours td {
-  color: #666;
+  color: #4e4e4e
 }
